feat: add styles for animations

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     
     <div
-      class="slide"
+      class="slide active"
       style="background-image: url(https://images.unsplash.com/photo-1530480667809-b655d4dc3aaa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1929&q=80)"
     >
       <h3>Bol'shoye Almatinskoye Ozero</h3>
